--- a/applications/employee-istio-app.yaml
+++ b/applications/employee-istio-app.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: 'https://github.com/your-org/istio-gitops.git'
+    repoURL: 'https://github.com/Mayank-creator/istio-git-ops.git'
     targetRevision: main
-    path: istio-configs
+    path: employee-service
   destination:
     server: https://kubernetes.default.svc
     namespace: dev
